; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_exec.c_pclose_check.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_exec.c_pclose_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERRCODE_SYSTEM_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"pclose failed: %m\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pclose_check(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @pclose(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %21

14:                                               ; preds = %11
  %15 = load i32, i32* @ERRCODE_SYSTEM_ERROR, align 4
  %16 = call i32 @errcode(i32 %15)
  %17 = call i32 @_(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to i8*
  %20 = call i32 (i32, i8*, ...) @log_error(i32 %16, i8* %19)
  br label %30

21:                                               ; preds = %11
  %22 = load i32, i32* %4, align 4
  %23 = call i8* @wait_result_to_str(i32 %22)
  store i8* %23, i8** %5, align 8
  %24 = load i32, i32* @ERRCODE_SYSTEM_ERROR, align 4
  %25 = call i32 @errcode(i32 %24)
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 (i32, i8*, ...) @log_error(i32 %25, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @pfree(i8* %28)
  br label %30

30:                                               ; preds = %21, %14
  %31 = load i32, i32* %4, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @pclose(i32*) #1

declare dso_local i32 @log_error(i32, i8*, ...) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i8* @wait_result_to_str(i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
